2A/05_Projet_GL/src/test/deca/context/invalid/complet/61_selct_type_non_class.deca
// Description :
//   acces non def 
// Resultats :
//    ligne 12 :
// Historique :  Le type attendu doit être un type de classe
//  cree le 16/01/2024


{
    int a ;
    a.x ;

}